--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
   <string name="price_hint">Price (numbers only)</string>
   <string name="description_hint">Description</string>
   <string name="save_menu">save</string>
+  <string name="title_activity_list">ListActivity</string>
+  <string name="delete_deal">Delete Deal</string>
 </resources>
